# MSMP

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  docker-compose.debug.yml  docker-compose.yml
example/communication_over_tcp/: CMakeLists.txt  main_a.cpp  main_b.cpp  message_a.hpp  message_a_handler.hpp  message_b.hpp  message_b_handler.cpp  message_b_handler.hpp
example/communication_over_usart/: CMakeLists.txt  main_a.cpp  main_b.cpp  message_a_handler.hpp  message_b.hpp  message_b_handler.hpp
include/msmp/: CMakeLists.txt  connection.hpp  constants.hpp  control_byte.hpp  crc_calculator.hpp  data_link_receiver.hpp  data_link_transmitter.hpp  default_configuration.hpp  frame.hpp  frame_receiver.hpp  frame_sender.hpp  message_broker.hpp  message_type.hpp  msmp.hpp  payload_receiver.hpp  payload_transceiver.hpp  payload_transmitter.hpp  transmission_status.hpp  transport_frame.hpp  transport_receiver.hpp  transport_transceiver.hpp  transport_transmitter.hpp  types.hpp  version.hpp
include/msmp/configuration/: CMakeLists.txt
include/msmp/layers/: CMakeLists.txt
include/msmp/layers/data_link/: CMakeLists.txt  data_link_receiver.cpp  data_link_receiver.hpp  data_link_receiver_events.hpp  data_link_receiver_guards.cpp  data_link_receiver_guards.hpp  data_link_receiver_sm.cpp  data_link_receiver_sm.hpp  data_link_receiver_states.hpp  data_link_transmitter.hpp  fwd.hpp
include/msmp/layers/data_link/receiver/: CMakeLists.txt  data_link_receiver.cpp  data_link_receiver.hpp  data_link_receiver_events.hpp  data_link_receiver_guards.cpp  data_link_receiver_guards.hpp  data_link_receiver_sm.cpp  data_link_receiver_sm.hpp  data_link_receiver_states.hpp  fwd.hpp
include/msmp/layers/data_link/transmitter/: CMakeLists.txt  data_link_transmitter.hpp
include/msmp/layers/physical/: CMakeLists.txt
include/msmp/messages/: CMakeLists.txt
include/msmp/messages/control/: CMakeLists.txt  ack.hpp  handshake.hpp  messages_ids.hpp  nack.hpp
include/msmp/serializer/: CMakeLists.txt  deserializers.hpp  endian.hpp  endian_type_traits.hpp  message_deserializer.hpp  serializers.hpp
source/msmp/: CMakeLists.txt  connection.hpp  default_time_provider.cpp  default_time_provider.hpp  host.cpp  host.hpp  message_broker.hpp  message_handler.hpp  message_type.hpp  transmission_status.hpp  transport_frame.hpp  transport_receiver.hpp  transport_transmitter.hpp  types.hpp
source/msmp/broker/: CMakeLists.txt  i_message_handler.hpp  message_broker.cpp  message_broker.hpp  message_handler.cpp  message_handler.hpp  typed_message_handler.hpp
source/msmp/configuration/: CMakeLists.txt  configuration.hpp
source/msmp/layers/: CMakeLists.txt
source/msmp/layers/datalink/: CMakeLists.txt
source/msmp/layers/datalink/receiver/: CMakeLists.txt  datalink_receiver.cpp  datalink_receiver.hpp  datalink_receiver_events.hpp  datalink_receiver_guards.cpp  datalink_receiver_guards.hpp  datalink_receiver_sm.cpp  datalink_receiver_sm.hpp  datalink_receiver_states.hpp  datalink_receiver_types.hpp  fwd.hpp  i_datalink_receiver.hpp
source/msmp/layers/datalink/transmitter/: CMakeLists.txt  datalink_transmitter.cpp  datalink_transmitter.hpp  datalink_transmitter_events.cpp  datalink_transmitter_events.hpp  datalink_transmitter_guards.cpp  datalink_transmitter_guards.hpp  datalink_transmitter_sm.cpp  datalink_transmitter_sm.hpp  datalink_transmitter_states.hpp  datalink_transmitter_types.hpp  i_datalink_transmitter.hpp
source/msmp/layers/physical/: CMakeLists.txt  data_writer_base.cpp  data_writer_base.hpp  i_data_writer.hpp
source/msmp/layers/session/: CMakeLists.txt  connection.cpp  connection.hpp  connection_events.hpp  connection_sm.cpp  connection_sm.hpp  connection_states.hpp  message_type.hpp  types.hpp
source/msmp/layers/transport/: CMakeLists.txt
source/msmp/layers/transport/receiver/: CMakeLists.txt  (+2 more)
source/msmp/messages/: CMakeLists.txt
source/msmp/messages/control/: CMakeLists.txt  ack.hpp  messages_ids.hpp  nack.hpp
source/msmp/messages/session/: disconnect.hpp  handshake.hpp
source/msmp/serializer/: CMakeLists.txt  deserializers.hpp  endian.hpp  message_deserializer.hpp  serialized_message.hpp  serializers.hpp
source/msmp/session/: connection.hpp  connection_events.hpp  connection_sm.hpp  connection_states.hpp
source/msmp_api/tcp/: CMakeLists.txt  connection.cpp  connection.hpp  tcp_host.cpp  tcp_host.hpp
source/msmp_api/usart/: CMakeLists.txt  connection.cpp  usart_host.cpp  usart_host.hpp
source/msmp_tcp/: CMakeLists.txt  boost_exception_handler.cpp  tcp_host.cpp  tcp_host.hpp  tcp_host_sm.hpp  tcp_reader.cpp  tcp_reader.hpp  tcp_writer.cpp  tcp_writer.hpp
source/msmp_usart/: CMakeLists.txt  configuration.hpp  usart_host.cpp  usart_host.hpp  usart_reader.cpp  usart_reader.hpp  usart_writer.cpp  usart_writer.hpp
test/ST/: CMakeLists.txt  PointToPointTests.cpp  main.cpp
test/UT/: CMakeLists.txt  ConnectionTests.cpp  DataLinkReceiverTests.cpp  DataLinkTransmitterTests.cpp  MessageBrokerTests.cpp  PayloadReceiverTests.cpp  PayloadTransmitterTests.cpp  TransportReceiverTests.cpp  TransportTransceiverTests.cpp  TransportTransmitterTests.cpp  crc_calculator_tests.cpp  frame_receiver_tests.cpp  frame_sender_tests.cpp  main.cpp
test/UT/broker/: MessageBrokerTests.cpp
test/UT/layers/session/: ConnectionTests.cpp
test/UT/messages/: CMakeLists.txt
test/UT/messages/control/: HandshakeTests.cpp
test/UT/serializers/: CMakeLists.txt  DeserializersTests.cpp  MessageDeserializerTests.cpp  SerializedMessageTests.cpp  SerializersTests.cpp
test/UT/stubs/: CMakeLists.txt  DataLinkReceiverStub.hpp  DataLinkTransmitterStub.hpp  ITimerStub.hpp  MessageHandlerMock.hpp  StandardErrorStreamStub.hpp  TimeStub.hpp  TimeoutTimerStub.hpp  TimerManagerStub.hpp  TransceiverStub.hpp  TransportReceiverStub.hpp  TransportTransceiverMock.hpp  TransportTransmitterStub.hpp  WriterForTest.hpp  WriterStub.hpp
test/test/UT/: CMakeLists.txt
test/test/UT/containers/: staticVectorTests.cpp
test/test/UT/request/: PayloadReceiverTests.cpp  PayloadTransmitterTests.cpp
(+34 files in other folders)
